# mini-jvm

./: .gitignore  Cargo.toml  README.md
classfile/: Cargo.toml
classfile/src/: access_flags.rs  attribute.rs  class_file.rs  constant.rs  descriptor.rs  error.rs  field.rs  lib.rs  method.rs  module.rs  ops.rs  package.rs  types.rs
hotspot/: Cargo.toml
hotspot/src/: basic_type.rs  lib.rs  macros.rs  stack.rs  types.rs
hotspot/src/classpath/: mod.rs
hotspot/src/oops/: array.rs  class.rs  field.rs  method.rs  mod.rs  module.rs  package.rs  symbol.rs
hotspot/src/runtime/: class_loader.rs  constant_pool.rs  frame.rs  local_vars.rs  mod.rs  park.rs  thread.rs
hotspot/src/sys/: dic.rs  mod.rs
instructions/: Cargo.toml
instructions/src/: lib.rs  opcode.rs
rtda/: Cargo.toml
