[package]
name = "classfile"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
bytes = { version = "0.6", features = ["serde"] }
bitflags = "1.2"
byteorder = "1"
log = "0.4"
env_logger = "0.8"