[package]
name = "hotspot"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile = { path = "../classfile" }
zip = "0.5"
hashbrown = "0.9"
libc = "0.2"
parking_lot = "0.11"